--- a/locales/pl.json
+++ b/locales/pl.json
@@ -246,7 +246,10 @@
       "title": "Yourcity - Changelog",
       "description": "Przeczytaj o zmianach jakie zachodzą na platformie Yourcity.",
       "keywords": "changelog, informacje, zmiany, wiadomości, opisy zmian"
-    }
+    },
+    "title": "Changelog",
+    "paging-button": "POKAŻ WIĘCEJ",
+    "network-connection-error": "Błąd sieci."
   },
   "agreements": {
     "head": {
