--- a/locales/en.json
+++ b/locales/en.json
@@ -366,7 +366,7 @@
     "home_page": "Home",
     "search_page": "Search",
     "photos_page": "Photos",
-    "cities_page": "Cities",
+    "countries_page": "Cities",
     "projects_page": "About project",
     "founder_page": "About founder",
     "changelog_page": "Changelog",
