--- a/locales/pl.json
+++ b/locales/pl.json
@@ -366,7 +366,7 @@
     "home_page": "Strona główna",
     "search_page": "Wyszukiwanie",
     "photos_page": "Zdjęcia",
-    "cities_page": "Miasta",
+    "countries_page": "Miasta",
     "projects_page": "O projekcie",
     "founder_page": "O twórcy",
     "changelog_page": "Changelog",
