--- a/locales/en.json
+++ b/locales/en.json
@@ -242,7 +242,8 @@
       "title": "Yourcity - About founder",
       "description": "Read more about the founder of Yourcity.",
       "keywords": "creator, creator of yourcity, yourcity engineer"
-    }
+    },
+    "title": "About founder"
   },
   "changelog": {
     "head": {
