--- a/locales/pl.json
+++ b/locales/pl.json
@@ -323,7 +323,7 @@
     "menu": {
       "information": "Informacje",
       "posts": "Posty",
-      "gallery": "Galeria",
+      "photos": "Zdjęcia",
       "comments": "Komentarze",
       "related-profiles": "Powiązane profile"
     },
