--- a/locales/pl.json
+++ b/locales/pl.json
@@ -4,7 +4,8 @@
   },
   "header": {
     "dropdown_menu": {
-      "language": "English"
+      "title": "Język",
+      "language": "Polski"
     }
   },
   "home": {
