--- a/locales/pl.json
+++ b/locales/pl.json
@@ -337,7 +337,22 @@
       "title": "Yourcity - Kontakt",
       "description": "Formularz kontaktowy - napisz wiadomość, zadaj pytanie lub opisz problem.",
       "keywords": "kontakt, formularz kontaktowy, pytanie, wiadomość, email"
-    }
+    },
+    "title": "Kontakt",
+    "subtitle": "Formularz kontaktowy",
+    "label": {
+      "title_message": "Tytuł widomości",
+      "email": "E-mail",
+      "message": "Wiadomość",
+      "checkbox": "Wyrażam zgodę na kontakt drogą elektroniczną na podany e-mail."
+    },
+    "rules": {
+      "title": "Tytuł jest wymagany.",
+      "email": "E-mail jest wymagany.",
+      "message": "Wiadomość jest wymagana.",
+      "terms": "Akceptacja warunków jest wymagana."
+    },
+    "send-button": "Wyślij"
   },
   "business": {
     "head": {
