update photos page

--- a/locales/de.json
+++ b/locales/de.json
@@ -248,10 +248,17 @@
       "description": "Sehen Sie sich eine Fotogalerie aus verschiedenen Orten, Standorte, Städten und Ländern an.",
       "keywords": "fotos, bilder, galerie, fotos, fotos von städten, bilder von gebäuden, ansichten, galerie yourcity"
     },
-    "information": "Information",
-    "share": "Share",
-    "tags": "Tags",
-    "gallery": "Gallery"
+    "dialog": {
+      "information": "Informationen",
+      "title": "Titel",
+      "date_addded": "Erstellungsdatum",
+      "location": "Lokalisierung",
+      "share": "Aktie",
+      "copy": "Kopieren Sie den Link",
+      "tags": "Tags",
+      "close-button": "Schließen"
+    },
+    "gallery": "Galerie"
   },
   "countries": {
     "head": {
